pong-o/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: pong-o
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong-o
  template:
    metadata:
      labels:
        app: pong-o
    spec:
      containers:
        - name: pong-o
          image: levonml/2.1-pong-o:latest
          imagePullPolicy: Always
          #volumeMounts:
          #- name: shared-logs
          #  mountPath: /tmp/kube
      #volumes:
      #  - name: shared-logs
      #    persistentVolumeClaim:
      #      claimName: shared-logs-claim
