pong-o/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-o-svc
spec:
  type: ClusterIP
  selector:
    app: pong-o
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
